# Project-MLOPerations

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cloudbuild.yaml  gpu_trainer_config.yaml  models.dvc  project-mloperations-cf9dafc8c431.json  pyproject.toml  requirements.txt  requirements_dev.txt  test.py
.dvc/: config
.github/workflows/: cloudbuild.yaml  pre-commit.yml  protect-main.yml  test.yml
cloudbuild/: cloudbuild_server.yaml  cloudbuild_train.yaml  gpu_trainer_config.yaml
config/: config.yaml  default_config.yaml
config/model/: model_config.yaml
data/: .gitignore  drifting.dvc  processed.zip.dvc  raw.zip.dvc  testing.zip.dvc  training.zip.dvc
dockerfiles/: server.dockerfile  test.dockerfile  train.dockerfile
docs/: mkdocs.yaml
reports/: README.md
src/: __init__.py  predict_model.py  train_model.py
src/data/: __init__.py  make_dataset.py  make_reference_data.py
src/models/: model.py
src/server/: main.py
tests/: __init__.py  test_api.py  test_data.py  test_model.py  test_predict.py  test_train.py  test_train_model.py
vit-base-beans/runs/Jan07_00-24-49_DESKTOP-MOH6O62/: events.out.tfevents.1704583490.DESKTOP-MOH6O62
wandb/: latest-run
wandb/run-20240116_004156-jzsdgbkc/: run-jzsdgbkc.wandb
wandb/run-20240116_004156-jzsdgbkc/files/: config.yaml
wandb/run-20240116_004817-zwyc5br2/: run-zwyc5br2.wandb
wandb/run-20240116_004817-zwyc5br2/files/: conda-environment.yaml  config.yaml  requirements.txt  wandb-metadata.json
